# legal_rag

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  citations.py  config.py  main.py  prompt_rules.py  pyproject.toml  templates.py
backend/agent/: __init__.py  graph.py  mcp_client.py  prompts.py  runner.py
backend/agents/: __init__.py  legal_case_agent.py
backend/evaluation/: agent_evaluator.py  aggregation.py  dataset.json  dataset_multihop.json  evaluator.py  metrics.py
backend/models/: rag_pipeline.py
backend/rag/: chunker.py  generation.py  reranker.py  retrieval.py  tokenization.py
backend/results/: eval_20260613_174815.json  head_to_head_20260616_212416.json
backend/scripts/: clear_cache.py  run_evaluation.py  run_head_to_head.py  scrape_laws.py
backend/tests/: test_agent.py  test_chunker.py  test_dataset.py  test_generation_config.py  test_legal_case_agent.py  test_metrics.py
client/: .gitignore  .prettierrc  ARCHITECTURE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: index.ts
client/src/components/ai-elements/: agent.tsx  attachments.tsx  audio-player.tsx  chain-of-thought.tsx  checkpoint.tsx  code-block.tsx  commit.tsx  confirmation.tsx  context.tsx  conversation.tsx  environment-variables.tsx  file-tree.tsx  inline-citation.tsx  loader.tsx  message.tsx  mic-selector.tsx  model-selector.tsx  package-info.tsx  persona.tsx  plan.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  sandbox.tsx  schema-display.tsx  shimmer.tsx  snippet.tsx  sources.tsx  speech-input.tsx  stack-trace.tsx  terminal.tsx  test-results.tsx  tool.tsx  transcription.tsx  voice-selector.tsx  web-preview.tsx
client/src/components/chat/: AgentTraceAccordion.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  MessageList.tsx  index.ts
client/src/components/layout/: Header.tsx  Layout.tsx
client/src/components/ui/: avatar.tsx  input-group.tsx  popover.tsx  switch.tsx  tabs.tsx
client/src/components/welcome/: EmptyState.tsx  SuggestedQuestions.tsx  WelcomeScreen.tsx  index.ts
client/src/hooks/: useChat.ts  useStreamingAgent.ts  useStreamingQuery.ts
client/src/services/: agentApi.ts  api.ts
client/src/types/: agent.ts  index.ts
documentation/: kodeks_na_truda.json  zakon_zadazhenia_dogovori.json  zakon_zashtita_potrebiteli.json
mcp/: .gitignore  pyproject.toml
mcp/src/: client.py  mcp_server.py  tools.py
